fixed image overflow bug

--- a/src/css/Background.css
+++ b/src/css/Background.css
@@ -1,14 +1,14 @@
 .background {
     position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
+    inset: 0;
+    overflow: hidden;
+    z-index: -1;
 
     background-color: black;
 }
 
 .background img {
+    display: block;
     width: 100%;
     object-fit: cover;
 
