--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: rgba(0, 0, 0, 0.50);
+    background-color: rgba(0, 0, 0, 0.75);
 
     display: flex;
     justify-content: space-between;
